/*define a search request message format, where each search request
 has a query string, the particular page of results you are interested
 in, and a number of results per page */
syntax = "proto3";

option go_package= "model/search_request"; // golang specific

message SearchRequest {
  string query = 1; // 1 is the field id (unique id)
  int32 page_number = 2; // 2 is the field id
  int32 result_per_page = 3; // 3 is the field id
}